# src/index.ts
@@ -18,11 +18,12 @@ import conversationsRouter from './routes/conversations.routes';
 import mediasRouter from './routes/medias.routes';
 import notificationsRouter from './routes/notifications.routes';
 import ordersRouter from './routes/orders.routes';
-import reivewsRouter from './routes/reviews.routes';
 import productsRouter from './routes/products.routes';
 import purchasesRouter from './routes/purchases.routes';
+import reivewsRouter from './routes/reviews.routes';
 import staticRouter from './routes/static.routes';
 import usersRouter from './routes/users.routes';
+import vouchersRouter from './routes/vouchers.routes';
 import databaseService from './services/database.services';
 import { initFolders } from './utils/file';
 import initSocket from './utils/socket';
@@ -37,6 +38,7 @@ databaseService.connect().then(() => {
   databaseService.indexReviews();
   databaseService.indexNotifications();
   databaseService.indexConversations();
+  databaseService.indexVouchers();
 });
 
 const app = express();
@@ -72,6 +74,7 @@ app.use('/products', productsRouter);
 app.use('/reviews', reivewsRouter);
 app.use('/medias', mediasRouter);
 app.use('/purchases', purchasesRouter);
+app.use('/vouchers', vouchersRouter);
 app.use('/orders', ordersRouter);
 app.use('/blogs', blogsRouter);
 app.use('/notifications', notificationsRouter);
